--- a/frontend/assets/variables.scss
+++ b/frontend/assets/variables.scss
@@ -2,6 +2,6 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
-// $material-light: (
-//   'background': rgb(184, 105, 105)
-// );
+$material-light: (
+  'background': #f2f2f2
+);
