--- a/frontend/assets/variables.scss
+++ b/frontend/assets/variables.scss
@@ -2,9 +2,12 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&display=swap");
+
 $material-light: (
   'background': #f2f2f2
 );
-$body-font-family: Lato;
+$body-font-family: 'Lato', sans-serif;
 $font-size-root: 20px;
-$header-font-family: Lato;
+$header-font-family: 'Lato', sans-serif;
