--- a/frontend/assets/variables.scss
+++ b/frontend/assets/variables.scss
@@ -11,3 +11,7 @@ $material-light: (
 $body-font-family: 'Lato', sans-serif;
 $font-size-root: 20px;
 $header-font-family: 'Lato', sans-serif;
+
+.v-card__text, .v-card__title {
+  word-break: normal;
+}
