Added instrument colors and plan steps page

--- a/frontend/assets/variables.scss
+++ b/frontend/assets/variables.scss
@@ -15,3 +15,5 @@ $header-font-family: 'Lato', sans-serif;
 .v-card__text, .v-card__title {
   word-break: normal;
 }
+
+$gradient: -webkit-linear-gradient(90deg, hsla(134, 66%, 42%, 1) 0%, hsla(164, 61%, 72%, 1) 46%, hsla(66, 86%, 86%, 1) 93%);
