--- a/backend/core/apps/users/templates/mail/welcome.html
+++ b/backend/core/apps/users/templates/mail/welcome.html
@@ -292,7 +292,7 @@
                                                                                     <td style="padding: 20px 0;">
                                                                                         <div
                                                                                             style="background-color: #fff; border-radius: 8px; border: 1px dashed #D2D2EF; padding: 8px; width: 80%; margin: auto; font-family:'Lato', Helvetica, sans-serif; color: #2E3041; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">
-                                                                                            <a href="{{ domain }}/waitlist/join/?referralCode={{ referral_code }}">{{ domain }}/waitlist/join/?referralCode={{ referral_code }}
+                                                                                            <a href="{{ domain }}/?referralCode={{ referral_code }}">{{ domain }}/?referralCode={{ referral_code }}
                                                                                             </p>
                                                                                         </div>
                                                                                     </td>
